--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "author": "",
   "license": "ISC",
-   "dependencies": {
+  "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.5",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0-rc.12",
@@ -30,6 +30,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^7.5.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
     "paypal-rest-sdk": "^1.8.1",
